--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,31 @@
 		{
 			"name": "Nischay Nahata",
 			"role": "Developer"
+		},
+		{
+			"name": "Sanjay Thiyagarajan",
+			"role": "Developer"
 		}
 	],
 	"require": {
-		"google/apiclient": "2.2.1"
+		"google/apiclient": "^2.12.1"
+	},
+	"require-dev": {
+		"mediawiki/mediawiki-codesniffer": "38.0.0",
+		"mediawiki/minus-x": "1.1.1",
+		"php-parallel-lint/php-console-highlighter": "0.5.0",
+		"php-parallel-lint/php-parallel-lint": "1.3.1"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor --exclude node_modules",
+			"minus-x check .",
+			"@phpcs"
+		],
+		"fix": [
+			"minus-x fix .",
+			"phpcbf ."
+		],
+		"phpcs": "phpcs -p -s ."
 	}
 }
