--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"google/apiclient": "^2.12.1"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "41.0.0",
+		"mediawiki/mediawiki-codesniffer": "43.0.0",
 		"mediawiki/minus-x": "1.1.1",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
 		"php-parallel-lint/php-parallel-lint": "1.3.2"
@@ -40,5 +40,10 @@
 			"phpcbf"
 		],
 		"phpcs": "phpcs -p -s ."
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
